@@ -9,7 +9,8 @@ QXmpp 0.7.4 (UNRELEASED)
     * Make it possible to call listenForClients and listenForServers
       multiple times to supported multiple IP address / ports.
   - Improve QXmppTransferManager:
-    * Allow StreamHost::host to contain a host name
+    * Change third argument of QXmppTransferManager::sendFile to a description.
+    * Allow StreamHost::host to contain a host name.
 
 QXmpp 0.7.3 (Sep 7, 2012)
 ------------------------
